force-core/main/default/objects/Contact/fields/Admin_Apex_Update__c.field-meta.xml
<CustomField>
    <fullName>Admin_Apex_Update__c</fullName>
    <description>Indicates a field update by Apex</description>
    <label>Admin Apex Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>