force-core/main/default/objects/Contact/fields/Admin_Automation_Update__c.field-meta.xml
<CustomField>
    <fullName>Admin_Automation_Update__c</fullName>
    <description>Indicates an update by automation</description>
    <label>Admin Automation Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>