force-core/main/default/objects/Contact/fields/Contact_Priority__c.field-meta.xml
<CustomField>
    <fullName>Contact_Priority__c</fullName>
    <description>Contact priority field used in chapter 6</description>
    <label>Contact Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>