force-core/main/default/objects/Contact/fields/High_Value_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>High_Value_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of opportunities worth &gt;50K</description>
    <label>High Value Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>