force-core/main/default/objects/Contact/fields/Last_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Close_Date__c</fullName>
    <description>Close date of the last open opportunity for this contact</description>
    <label>Last Close Date</label>
    <type>Date</type>
</CustomField>