force-core/main/default/objects/Contact/validationRules/Dont_Update_User_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Dont_Update_User_0</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; LastName = &apos;cttest_0&apos;</errorConditionFormula>
    <errorMessage>You can&apos;t update user 0</errorMessage>
</ValidationRule>